gap correction on cards

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,22 +1,22 @@
 .cards {
-    padding-top: 20px;
-    padding-bottom: 40px;
-    border-bottom: 1px solid #21212166;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #21212166;
 }
 
 .cards__list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 413px);
-    gap: 20px 40px;
-    justify-content: center;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 413px);
+  gap: 40px 20px;
+  justify-content: center;
 }
 
-@media screen and (max-width: 627px){
-    .cards__list {
-        gap: 20px;
-        grid-template-columns: repeat(auto-fit, 288px);
-    }
+@media screen and (max-width: 627px) {
+  .cards__list {
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, 288px);
+  }
 }
